# tools-mcp

./: .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
commands/: http.md  mysql.md  redis.md  ssh.md
crates/tools-mcp/: Cargo.toml
crates/tools-mcp-core/: Cargo.toml
crates/tools-mcp-core/src/: lib.rs
crates/tools-mcp-http/: Cargo.toml
crates/tools-mcp-http/src/: execute.rs  executor.rs  lib.rs  request.rs
crates/tools-mcp-mongo/: Cargo.toml
crates/tools-mcp-mongo/src/: connection.rs  execute.rs  executor.rs  lib.rs
crates/tools-mcp-mysql/: Cargo.toml
crates/tools-mcp-mysql/src/: connection.rs  execute.rs  executor.rs  lib.rs
crates/tools-mcp-orchestrator/: Cargo.toml
crates/tools-mcp-orchestrator/src/: http.rs  lib.rs  mongo.rs  mysql.rs  pgsql.rs  redis.rs  ssh.rs
crates/tools-mcp-orchestrator/src/config/: types.rs
crates/tools-mcp-pgsql/: Cargo.toml
crates/tools-mcp-pgsql/src/: connection.rs  execute.rs  executor.rs  lib.rs
crates/tools-mcp-redis/: Cargo.toml
crates/tools-mcp-redis/src/: connection.rs  execute.rs  executor.rs  lib.rs
crates/tools-mcp-ssh/: Cargo.toml
crates/tools-mcp-ssh/src/: exec.rs  execute.rs  lib.rs  session.rs
crates/tools-mcp/src/: error.rs  lib.rs  main.rs
crates/tools-mcp/src/cli/: args.rs  handler.rs  mod.rs
crates/tools-mcp/src/config/: loader.rs  mod.rs
crates/tools-mcp/src/connection/: mod.rs  mysql.rs  traits.rs
crates/tools-mcp/src/core/: mysql.rs
crates/tools-mcp/src/executor/: mod.rs  mysql.rs
crates/tools-mcp/src/mcp/: tools.rs
crates/tools-mcp/src/tunnel/: direct.rs  mod.rs  ssh.rs  traits.rs
crates/tools4a-browser/: Cargo.toml
crates/tools4a-browser/src/: exec.rs  execute.rs  lib.rs  mcp.rs  orchestrator.rs  request.rs
crates/tools4a-clickhouse/: Cargo.toml
crates/tools4a-clickhouse/src/: connection.rs  execute.rs  executor.rs  lib.rs  mcp.rs  orchestrator.rs
crates/tools4a-core/: Cargo.toml
crates/tools4a-core/src/: lib.rs  mcp.rs  result_compression.rs  session.rs  timeout.rs  toon.rs
crates/tools4a-core/src/config/: loader.rs  merger.rs  mod.rs  types.rs
crates/tools4a-core/src/tunnel/: direct.rs  mod.rs  socks_tunnel.rs  ssh.rs  streamlocal.rs
crates/tools4a-core/src/tunnel/socks/: codec.rs  connector.rs  mod.rs  server.rs
crates/tools4a-docker/: Cargo.toml
crates/tools4a-docker/src/: actions.rs  connection.rs  lib.rs  mcp.rs  orchestrator.rs  run.rs
crates/tools4a-http/: Cargo.toml
crates/tools4a-http/src/: execute.rs  executor.rs  lib.rs  mcp.rs  orchestrator.rs  request.rs
crates/tools4a-milvus/: Cargo.toml
crates/tools4a-milvus/src/: actions.rs  connection.rs  lib.rs  mcp.rs  orchestrator.rs  run.rs
crates/tools4a-mongo/: Cargo.toml
crates/tools4a-mongo/src/: connection.rs  execute.rs  executor.rs  lib.rs  mcp.rs  orchestrator.rs
crates/tools4a-mysql/: Cargo.toml
crates/tools4a-mysql/src/: connection.rs  execute.rs  executor.rs  lib.rs  mcp.rs  orchestrator.rs
crates/tools4a-orchestrator/: Cargo.toml
crates/tools4a-orchestrator/src/: http.rs  lib.rs  mongo.rs  mysql.rs  pgsql.rs  readonly.rs  redis.rs  ssh.rs
crates/tools4a-orchestrator/src/config/: loader.rs  merger.rs  mod.rs  types.rs
crates/tools4a-orchestrator/src/tunnel/: direct.rs  mod.rs
crates/tools4a-pgsql/: Cargo.toml
crates/tools4a-pgsql/src/: connection.rs  execute.rs  executor.rs  lib.rs  mcp.rs  orchestrator.rs
crates/tools4a-rabbitmq/: Cargo.toml
crates/tools4a-rabbitmq/src/: actions.rs  connection.rs  lib.rs  mcp.rs  orchestrator.rs  run.rs
crates/tools4a-redis/: Cargo.toml
crates/tools4a-redis/src/: connection.rs  execute.rs  executor.rs  lib.rs  mcp.rs  orchestrator.rs
crates/tools4a-ssh/: Cargo.toml
crates/tools4a-ssh/src/: exec.rs  execute.rs  lib.rs  mcp.rs  orchestrator.rs  request.rs  session.rs
crates/tools4a-tunnel/: Cargo.toml
crates/tools4a-tunnel/src/: lib.rs  ssh.rs
docs/superpowers/plans/: 2026-05-07-tools-mcp-phase1.md  2026-05-08-tools-mcp-phase2-ssh-tunnel.md  2026-05-08-tools-mcp-phase3-mcp-server.md  2026-05-08-tools-mcp-phase4-workspace-split.md  2026-05-08-tools-mcp-phase5-redis.md  2026-05-08-tools-mcp-phase6-http.md  2026-05-08-tools-mcp-phase7-ssh-direct.md  2026-05-08-tools-mcp-phase8-orchestrator.md  2026-05-09-tools-mcp-phase12-clickhouse.md  2026-05-09-tools-mcp-phase9-pgsql-mongo.md  2026-05-11-tools-mcp-phase13-mcp-apps-ui.md  2026-05-13-tools-mcp-phase14-browser-phase1.md  2026-05-13-tools-mcp-phase14-browser-phase2.md  2026-05-14-tools-mcp-phase14-streamlocal-tunnel.md  2026-05-14-tools-mcp-phase15-docker.md  2026-05-14-tools-mcp-phase16-tunnel-serve.md  2026-05-14-tools-mcp-phase17-rabbitmq.md  2026-05-14-tools-mcp-phase18-milvus.md
docs/superpowers/specs/: 2026-05-07-tools-mcp-design.md
skills/browser-using/: SKILL.md
skills/http-using/: SKILL.md
skills/mysql-debugging/: SKILL.md
skills/redis-using/: SKILL.md
skills/ssh-bastion-checklist/: SKILL.md
skills/ssh-using/: SKILL.md
skills/tools-mcp-using/: SKILL.md
skills/tools4a-using/: SKILL.md
src/: error.rs  lib.rs  main.rs
src/cli/: args.rs  handler.rs  mod.rs
src/cli/handler/: browser.rs  clickhouse.rs  docker.rs  http.rs  milvus.rs  mod.rs  mongo.rs  mysql.rs  pgsql.rs  rabbitmq.rs  redis.rs  shared.rs  ssh.rs  tunnel_serve.rs
src/config/: loader.rs  merger.rs  mod.rs  types.rs
src/connection/: mod.rs  mysql.rs
src/core/: http.rs  mod.rs  mysql.rs  redis.rs  ssh.rs
src/executor/: mysql.rs
src/mcp/: mod.rs  server.rs  tools.rs
src/mcp/ui/: escape.rs  http_response.rs  mod.rs  sql_table.rs
src/output/: cli.rs  mod.rs  types.rs
src/tunnel/: direct.rs  mod.rs  ssh.rs
tests/: config_tests.rs  mcp_smoke.rs
tests/fixtures/: test-config.toml  test-config.yaml
