[workspace]
resolver = "3"
members = [
    "crates/tools-mcp-core",
    "crates/tools-mcp-http",
    "crates/tools-mcp-mongo",
    "crates/tools-mcp-mysql",
    "crates/tools-mcp-orchestrator",
    "crates/tools-mcp-pgsql",
    "crates/tools-mcp-redis",
    "crates/tools-mcp-ssh",
]

[package]
name = "tools-mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tools-mcp"
path = "src/main.rs"

[lib]
name = "tools_mcp"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
rmcp = { version = "1.6", features = ["server", "transport-io"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
tokio = { version = "1.40", features = ["full"] }
tools-mcp-core = { path = "crates/tools-mcp-core" }
tools-mcp-orchestrator = { path = "crates/tools-mcp-orchestrator" }
toml = "0.8"

[dev-dependencies]
tempfile = "3.12"
