[workspace]
resolver = "3"
members = [
    "crates/tools4a-browser",
    "crates/tools4a-clickhouse",
    "crates/tools4a-core",
    "crates/tools4a-docker",
    "crates/tools4a-http",
    "crates/tools4a-mongo",
    "crates/tools4a-mysql",
    "crates/tools4a-pgsql",
    "crates/tools4a-rabbitmq",
    "crates/tools4a-redis",
    "crates/tools4a-ssh",
]

[package]
name = "tools4a"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "tools4a"
path = "src/main.rs"

[lib]
name = "tools4a"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
rmcp = { version = "1.6", features = ["server", "transport-io"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
tokio = { version = "1.40", features = ["full"] }
tools4a-browser = { path = "crates/tools4a-browser" }
tools4a-clickhouse = { path = "crates/tools4a-clickhouse" }
tools4a-core = { path = "crates/tools4a-core" }
tools4a-docker = { path = "crates/tools4a-docker" }
tools4a-http = { path = "crates/tools4a-http" }
tools4a-mongo = { path = "crates/tools4a-mongo" }
tools4a-mysql = { path = "crates/tools4a-mysql" }
tools4a-pgsql = { path = "crates/tools4a-pgsql" }
tools4a-rabbitmq = { path = "crates/tools4a-rabbitmq" }
tools4a-redis = { path = "crates/tools4a-redis" }
tools4a-ssh = { path = "crates/tools4a-ssh" }
toml = "0.8"
toon = "0.1.2"

[dev-dependencies]
tempfile = "3.12"
