[package]
name = "tools-mcp-http"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "stream"] }
tools-mcp-core = { path = "../tools-mcp-core" }

[dev-dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
