[package]
name = "tools-mcp-pgsql"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
tokio = { version = "1.40", features = ["macros", "rt"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tools-mcp-core = { path = "../tools-mcp-core" }

[dev-dependencies]
tokio = { version = "1.40", features = ["full"] }
