[package]
name = "tools-mcp-redis"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
redis = { version = "0.30", features = ["tokio-comp"] }
shlex = "1.3"
tools-mcp-core = { path = "../tools-mcp-core" }
urlencoding = "2"

[dev-dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
