[package]
name = "tools-mcp-ssh"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
russh = "0.46"
tokio = { version = "1.40", features = ["sync", "macros"] }
tools-mcp-core = { path = "../tools-mcp-core" }

[dev-dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
