[package]
name = "tools-mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tools-mcp"
path = "src/main.rs"

[lib]
name = "tools_mcp"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
mysql_async = "0.34"
rmcp = { version = "1.6", features = ["server", "transport-io"] }
russh = "0.46"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
schemars = "1.0"
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tools-mcp-core = { path = "../tools-mcp-core" }
toml = "0.8"

[dev-dependencies]
tempfile = "3.12"
