[package]
name = "tools4a-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
russh = "0.46"
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
tokio = { version = "1.40", features = ["full"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.12"
