[package]
name = "tools4a-http"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "stream"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
tools4a-core = { path = "../tools4a-core" }
tools4a-tunnel = { path = "../tools4a-tunnel" }

[dev-dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
