[package]
name = "tools4a-mongo"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
mongodb = { version = "3", default-features = false, features = ["rustls-tls", "bson-3", "compat-3-3-0"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tools4a-core = { path = "../tools4a-core" }
urlencoding = "2"

[dev-dependencies]
tokio = { version = "1.40", features = ["full"] }
