[package]
name = "tools4a-mysql"
version = "0.1.1"
edition = "2024"

[dependencies]
async-trait = "0.1"
mysql_async = "0.34"
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
tools4a-core = { path = "../tools4a-core" }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
