[package]
name = "tools4a-orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
russh = "0.46"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
tokio = { version = "1.40", features = ["full"] }
toml = "0.8"
tools4a-core = { path = "../tools4a-core" }
tools4a-http = { path = "../tools4a-http" }
tools4a-mongo = { path = "../tools4a-mongo" }
tools4a-mysql = { path = "../tools4a-mysql" }
tools4a-pgsql = { path = "../tools4a-pgsql" }
tools4a-redis = { path = "../tools4a-redis" }
tools4a-ssh = { path = "../tools4a-ssh" }

[dev-dependencies]
tempfile = "3.12"
