[package]
name = "tools4a-rabbitmq"
version = "0.1.1"
edition = "2024"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "json"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["macros", "rt"] }
tools4a-core = { path = "../tools4a-core" }
urlencoding = "2.1"

[dev-dependencies]
tokio = { version = "1.40", features = ["full"] }
