[package]
name = "tools4a-redis"
version = "0.1.1"
edition = "2024"

[dependencies]
async-trait = "0.1"
redis = { version = "0.30", features = ["tokio-comp"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
shlex = "1.3"
tools4a-core = { path = "../tools4a-core" }
urlencoding = "2"

[dev-dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
